# dev-connect

./: .gitignore  AGENTS.md  Makefile  README.md  go.mod  install.sh  pyproject.toml
cmd/dev/: main.go
docs/: coding-standards.md  design-decisions.md  execution-plan.md
internal/cli/: cli.go  cli_test.go  codegraph.go  types.go
internal/commands/: codegraph.go  commands.go  commands_test.go
internal/config/: config.go  config_test.go
internal/model/: types.go
internal/ssh/: ssh.go  ssh_test.go
internal/stats/: stats.go
skills/dev-connect/: SKILL.md
skills/dev-connect/references/: agent-supervisor-workflow.md
src/dev_connect/: __init__.py  cli.py  models.py
src/dev_connect/commands/: __init__.py  agent.py  cat.py  diff.py  edit.py  exec.py  find.py  grep.py  head.py  ls.py  patch.py  pull.py  push.py  repo_status.py  tail.py  tree.py  write.py
src/dev_connect/common/: __init__.py  config.py  exceptions.py  ssh.py
tests/: test_agent.py  test_cat.py  test_config.py  test_exec.py  test_patch.py  test_repo_status.py
